kube/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '47'
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["192.168.50.53","192.168.50.56","192.168.50.57"],"port":80,"protocol":"HTTP","serviceName":"llama:frontend-aginsurancellm","ingressName":"llama:frontend-ingress","hostname":"aginsurancellm.endeavour.cs.vt.edu","path":"/","allNodes":false}]
  creationTimestamp: '2024-02-10T19:20:49Z'
  generation: 53
  labels:
    workload.user.cattle.io/workloadselector: apps.deployment-llama-frontend-aginsurancellm
  managedFields:
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:field.cattle.io/publicEndpoints: {}
          f:labels:
            .: {}
            f:workload.user.cattle.io/workloadselector: {}
        f:spec:
          f:progressDeadlineSeconds: {}
          f:replicas: {}
          f:revisionHistoryLimit: {}
          f:selector: {}
          f:strategy:
            f:rollingUpdate:
              .: {}
              f:maxSurge: {}
              f:maxUnavailable: {}
            f:type: {}
          f:template:
            f:metadata:
              f:annotations:
                .: {}
                f:cattle.io/timestamp: {}
              f:labels:
                .: {}
                f:workload.user.cattle.io/workloadselector: {}
              f:namespace: {}
            f:spec:
              f:containers:
                k:{"name":"frontend-aginsurancellm"}:
                  .: {}
                  f:env:
                    .: {}
                    k:{"name":"AUTH_GOOGLE_ID"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"AUTH_GOOGLE_SECRET"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"AUTH_REDIRECT_PROXY_URL"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"AUTH_SECRET"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"KV_REST_API_TOKEN"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"KV_REST_API_URL"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"NEXTAUTH_URL"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"URL"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:ports:
                    .: {}
                    k:{"containerPort":3000,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:name: {}
                      f:protocol: {}
                  f:resources: {}
                  f:securityContext:
                    .: {}
                    f:allowPrivilegeEscalation: {}
                    f:privileged: {}
                    f:readOnlyRootFilesystem: {}
                    f:runAsNonRoot: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
              f:dnsConfig: {}
              f:dnsPolicy: {}
              f:imagePullSecrets:
                .: {}
                k:{"name":"aginsurancellm-saketh"}: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:terminationGracePeriodSeconds: {}
      manager: agent
      operation: Update
      time: '2024-03-27T14:26:22Z'
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:deployment.kubernetes.io/revision: {}
        f:status:
          f:availableReplicas: {}
          f:conditions:
            .: {}
            k:{"type":"Available"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
            k:{"type":"Progressing"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
          f:observedGeneration: {}
          f:readyReplicas: {}
          f:replicas: {}
          f:updatedReplicas: {}
      manager: kube-controller-manager
      operation: Update
      subresource: status
      time: '2024-03-27T18:24:14Z'
  name: frontend-aginsurancellm
  namespace: llama
  resourceVersion: '310488422'
  uid: 37e28cb1-cf31-49db-a9b3-870cd3063eb7
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-llama-frontend-aginsurancellm
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: '2024-03-27T03:22:29Z'
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-llama-frontend-aginsurancellm
      namespace: llama
    spec:
      containers:
        - env:
            - name: AUTH_GOOGLE_ID
              value: >-
                756676222690-jh1f7itc04v3ivctujmj2dejr4l78uk7.apps.googleusercontent.com
            - name: AUTH_GOOGLE_SECRET
              value: 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
            - name: AUTH_SECRET
              value: 8f1f4e754117742392ee1d59882c35e4
            - name: URL
              value: https://backend-aginsurancellm.endeavour.cs.vt.edu/
            - name: AUTH_REDIRECT_PROXY_URL
              value: https://aginsurancellm.endeavour.cs.vt.edu/api/auth
            - name: NEXTAUTH_URL
              value: https://aginsurancellm.endeavour.cs.vt.edu/
            - name: KV_REST_API_URL
              value: https://userdb-redis.endeavour.cs.vt.edu/
            - name: KV_REST_API_TOKEN
              value: example_token
          image: container.cs.vt.edu/saketh/aginsurancellm/frontend
          imagePullPolicy: Always
          name: frontend-aginsurancellm
          ports:
            - containerPort: 3000
              name: serve
              protocol: TCP
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsConfig: {}
      dnsPolicy: Default
      imagePullSecrets:
        - name: aginsurancellm-saketh
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: '2024-02-13T17:28:37Z'
      lastUpdateTime: '2024-02-13T17:28:37Z'
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: 'True'
      type: Available
    - lastTransitionTime: '2024-02-10T19:20:49Z'
      lastUpdateTime: '2024-03-27T18:24:14Z'
      message: >-
        ReplicaSet "frontend-aginsurancellm-bf7b8fc55" has successfully
        progressed.
      reason: NewReplicaSetAvailable
      status: 'True'
      type: Progressing
  observedGeneration: 53
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
