kube/frontend/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["llama/frontend-aginsurancellm"]'
    management.cattle.io/ui-managed: 'true'
  creationTimestamp: '2024-02-10T19:52:46Z'
  managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/targetWorkloadIds: {}
            f:management.cattle.io/ui-managed: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"37e28cb1-cf31-49db-a9b3-870cd3063eb7"}: {}
        f:spec:
          f:internalTrafficPolicy: {}
          f:ports:
            .: {}
            k:{"port":3000,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: agent
      operation: Update
      time: '2024-02-13T15:45:49Z'
  name: frontend-aginsurancellm
  namespace: llama
  ownerReferences:
    - apiVersion: apps/v1
      controller: true
      kind: Deployment
      name: frontend-aginsurancellm
      uid: 37e28cb1-cf31-49db-a9b3-870cd3063eb7
  resourceVersion: '270456400'
  uid: 1e27856a-b302-4af6-b06c-4d764b48452d
spec:
  clusterIP: 10.43.178.83
  clusterIPs:
    - 10.43.178.83
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: serve
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-llama-frontend-aginsurancellm
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
